# neetml

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py  setup_environment.sh
data/00_external/: EAL Dashboard Version 2.1 Primary.xlsx
guide_installation/conda/: environment.yml
guide_installation/pip/: requirements.txt
guide_installation/poetry/: pyproject.toml
guide_notebook/step_guides/: 1_data_preparation.ipynb  2_feature_engineering.ipynb
neetml/: __init__.py  config.py  paths.py
neetml/configs/: data_manifest.yaml  default_config.yaml  model_config.yaml
neetml/feature_engineering/: __init__.py  _helpers.py  pipeline.py
neetml/feature_engineering/modules/: _consolidation_utils.py  _derivation_utils.py  consolidation.py  linking.py
neetml/features/: pipeline.py
neetml/features/modules/: derivation.py
neetml/preprocessing/: pipeline.py
neetml/preprocessing/modules/: _merging_utils.py  aggregation.py  cleaning.py  validation.py
neetml/raw_prep/: __init__.py  _utils.py
neetml/raw_prep/modules/: __init__.py  _aggregation_utils.py  _merging_utils.py  _metadata_utils.py  _naming_utils.py  merging.py  metadata.py  naming.py  profiling.py
neetml/utils/: code_mappings.py  constants.py  logger_setup.py  misc.py
